load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "loaddata",
    srcs = [
        "dispatcher.go",
        "proto.go",
        "scheduler.go",
        "subtask_executor.go",
        "wrapper.go",
    ],
    importpath = "github.com/pingcap/tidb/disttask/loaddata",
    visibility = ["//visibility:public"],
    deps = [
        "//br/pkg/lightning/backend",
        "//br/pkg/lightning/backend/encode",
        "//br/pkg/lightning/backend/kv",
        "//br/pkg/lightning/checkpoints",
        "//br/pkg/lightning/common",
        "//br/pkg/lightning/config",
        "//br/pkg/lightning/log",
        "//br/pkg/lightning/mydump",
        "//br/pkg/storage",
        "//ddl/ingest",
        "//disttask/framework/dispatcher",
        "//disttask/framework/proto",
        "//disttask/framework/scheduler",
        "//executor/importer",
        "//parser",
        "//parser/ast",
        "//parser/model",
        "//parser/mysql",
        "//table/tables",
        "//util/intest",
        "//util/logutil",
        "@com_github_pingcap_errors//:errors",
        "@org_golang_x_exp//maps",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "loaddata_test",
    timeout = "short",
    srcs = [
        "dispatcher_test.go",
        "wrapper_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":loaddata"],
    flaky = True,
    shard_count = 9,
    deps = [
        "//br/pkg/lightning/backend",
        "//br/pkg/lightning/backend/kv",
        "//br/pkg/lightning/checkpoints",
        "//br/pkg/lightning/common",
        "//br/pkg/lightning/config",
        "//br/pkg/lightning/mydump",
        "//disttask/framework/dispatcher",
        "//disttask/framework/proto",
        "//executor/importer",
        "//keyspace",
        "//parser/model",
        "//parser/mysql",
        "//types",
        "//util/size",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
